# hopfield

./: .gitignore  CMakeLists.txt  analyze.py  analyze2.py  anapyze_jikken2.py  jikken1.py  jikken2.py  script.py
include/: hopfield.hpp  hopfield_3d.hpp  pattern.hpp
report/: report.md
src/: main.cpp
